--- a/src/main/resources/templates/user/search1.html
+++ b/src/main/resources/templates/user/search1.html
@@ -127,8 +127,8 @@
     <a href="#">인기 칵테일</a>
     <a href="#">추천 칵테일</a>
     <a href="#">칵테일 검색</a>
-    <a href="user.html">
-      <img src="line.png">
+    <a href="mypage.html">
+      <img src="../../static/images/line.png">
     </a>
   </div>
 </div>
