--- a/src/main/resources/templates/user/withdrawal_complete.html
+++ b/src/main/resources/templates/user/withdrawal_complete.html
@@ -67,8 +67,8 @@
     <a href="#">인기 칵테일</a>
     <a href="#">추천 칵테일</a>
     <a href="#">칵테일 검색</a>
-    <a href="mypage.html">
-      <img src="../../static/images/line.png">
+    <a href="/api/login">
+      <img src="/images/line.png">
     </a>
   </div>
 </div>
